fix(frontend): changed focus color indicator to meet minimal contrast ratio of 3.00:1

--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -2,6 +2,9 @@ $theme-show-notifications: false;
 $theme-image-path: "~uswds/img";
 $theme-font-path: "~uswds/fonts";
 
+//general settings
+$theme-focus-color: "blue-60v";
+
 // links
 $theme-link-color: "base";
 $theme-link-visited-color: "base-light";
